force-app/main/default/objects/OPPIntegration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Ariba_Application_Key__c</fullName>
        <label>Ariba Application Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ariba_Application_Name__c</fullName>
        <label>Ariba Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ariba_Authorization_Endpoint__c</fullName>
        <label>Ariba Authorization Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ariba_Client_Id__c</fullName>
        <label>Ariba Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ariba_Client_Secret__c</fullName>
        <label>Ariba Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ariba_Disable_Check_Email_Comparison__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ariba Disable Check Email Comparison</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ariba_Grant_Type__c</fullName>
        <label>Ariba Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ariba_Password_Adapter__c</fullName>
        <label>Ariba Password Adapter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ariba_Pending_Approvables_Endpoint__c</fullName>
        <label>Ariba Pending Approvables Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ariba_Realm__c</fullName>
        <label>Ariba Realm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Azure_Client_Id__c</fullName>
        <label>Azure Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Azure_Client_Secret__c</fullName>
        <label>Azure Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Azure_Login_Endpoint__c</fullName>
        <label>Azure Login Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Azure_Member_Environment__c</fullName>
        <label>Azure Member Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Azure_Tenant_ID_del__c</fullName>
        <label>Azure Tenant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coin_Add_Endpoint__c</fullName>
        <label>Coin Add Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coin_Authorization_Endpoint__c</fullName>
        <label>Coin Authorization Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coin_Authorization_Password__c</fullName>
        <label>Coin Authorization Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coin_Authorization_Username__c</fullName>
        <label>Coin Authorization Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coin_Get_Endpoint__c</fullName>
        <label>Coin Get Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coin_Login_Password__c</fullName>
        <label>Coin Login Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coin_Login_Username__c</fullName>
        <label>Coin Login Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather_Endpoint__c</fullName>
        <label>Weather Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather_Token__c</fullName>
        <label>Weather Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OPPIntegration</label>
</CustomObject>